fixed last slider spacing

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 * {
- /*  outline: 2px red solid;*/
+/*  outline: 2px red solid;*/
 }
 
 html, body {
@@ -42,6 +42,7 @@ p {
 #settings-input {
     width: 100%;
     border-radius: 5px;
+    margin-bottom: 15px;
 }
 
 button {
